--- a/index.qmd
+++ b/index.qmd
@@ -25,7 +25,7 @@ about:
 ---
 
 <!-- ::: {.small-text} -->
-Hi there! I'm Sam (and my last name is pronounced "chick"). Professionally, I love teaching data science skills, learning and implementing inclusive pedagogical approaches, and the communities that supports both of those things. Outside of work, I'm an avid hiker, novice (but passionate) meal-maker, and I really love the color green. Poke around my website to learn more!
+Hi there! I'm Sam (and my last name is pronounced "chick"). Professionally, I love teaching data science skills, learning and implementing inclusive pedagogical approaches, and the communities that support both of those things. Outside of work, I'm an avid hiker, novice (but passionate) meal-maker, and I really love the color green. Poke around my website to learn more!
 <!-- ::: -->
 
 <!-- ### hi there!     -->
