rearragned text on project pages; still want to tweak those pages a bit more..

--- a/projects/2023-06-22-openscapes-website-dev/index.qmd
+++ b/projects/2023-06-22-openscapes-website-dev/index.qmd
@@ -2,7 +2,7 @@
 title: "Openscapes Website"
 description: |
   porting and redesigning the Openscapes website
-date: 2023-06-22
+#date: 2023-06-22
 categories: [Quarto website]
 image: openscapes-hex-white-bg.png
 draft: false
@@ -12,7 +12,7 @@ draft: false
 
 <br>
 
-# Project overview
+<!-- # Project overview -->
 
 My first freelancing adventure(!) was spent porting the [Openscapes website](https://openscapes.org/) from [`{blogdown}`](https://bookdown.org/yihui/blogdown/) to [Quarto](https://quarto.org/) and redesigning aspects of the website's layout, styling, and overall functionality. I worked closely with [Julie Lowndes](https://jules32.github.io/) (founding director of Openscapes) and [Stefanie Butland](https://stefaniebutland.netlify.app/) (core Openscapes team member) to bring their vision to life and it was *seriously* such a fun project. I wrote a [blog post](../../posts/2023-08-01-openscapes-website/index.qmd) about my experience / some of the highlights. Check it out!
 
