--- a/projects/2023-02-15-bren-student-data-explorer/index.qmd
+++ b/projects/2023-02-15-bren-student-data-explorer/index.qmd
@@ -2,7 +2,7 @@
 title: "Bren Student Data Explorer"
 description: |
   refactoring & maintaining Bren's Shiny app for visualizing admissions and career outcome data of current students and recent graduates
-date: 2023-02-15
+# date: 2023-02-15
 categories: [Shiny]
 image: bren-hex-white-bg.png
 draft: false
@@ -12,24 +12,22 @@ draft: false
 
 <br>
 
-# What's the Bren Student Data Explorer?
+<!-- # What's the Bren Student Data Explorer? -->
 
 In an effort to increase transparency surrounding student demographics and post-graduation career placement statistics, the [Bren School](https://bren.ucsb.edu/) hired R Shiny Developer Fellow, [Halina Do-Linh](https://github.com/hdolinh/) -- she designed and built v1.0 of the public-facing [dashboard](https://shinyapps.bren.ucsb.edu/student-data-explorer/) for exploring these data in summer 2022.
+
+<!-- # My role -->
+
+I (along with a number of other Bren staff) oversaw the development of Bren Student Data Explorer v1.0 (though to be clear, Halina led the design and technical development of the dashboard -- it's really her product to brag about!). Each year, the dashboard will be updated with new demographic data based on applications and admissions, provided by [UCSB's Graduate Division](https://www.graddiv.ucsb.edu/), and post-grad career placement data from the [Bren's Career Services Team](https://bren.ucsb.edu/career-services). 
+
+The proverbial torch was passed to me for the next round of maintenance and updates in January 2023. This involved refactoring the code base, processing new data, and updating the dashboard. Some additional refactoring is likely to happen during the next big update in order to further simplify the code base and improve readability -- I'll be working with MEDS Program Coordinator, [Jamie Montgomery](https://www.jamiecmontgomery.com/), to continue this maintenance year-to-year.
 
 <br>
 
 <img class="center-img" src="dashboard.jpeg" alt="A online dashboard with a banner image depicting the Bren School building with the ocean to the left. Atop the image reads in all capital letters, 'BREN STUDENT DATA EXPLORER'. Beneath the banner image are two side-by-side boxes with text. The top of the left-hand box reads, 'Learn about students at the Bren School', and the top of the right-hand box reads, 'About the data'. A left-hand sidebar indicates that we're viewing the Welcome page. Two other pages are listed below: Demographics and Career Outcomes." width="70%">
 
 ::: {.gray-italic .center-text}
-The landing page of the Bren Student Data Explorer, accessible at <https://shinyapps.bren.ucsb.edu/student-data-explorer/>
+The welcome page of the Bren Student Data Explorer, accessible at <https://shinyapps.bren.ucsb.edu/student-data-explorer/>
 :::
-
-<br>
-
-# My role
-
-I (along with a number of other Bren staff) oversaw the development of Bren Student Data Explorer v1.0 (though to be clear, Halina led the design and technical development of the dashboard -- it's really her product to brag about!). Each year, the dashboard will be updated with new demographic data based on applications and admissions, provided by [UCSB's Graduate Division](https://www.graddiv.ucsb.edu/), and post-grad career placement data from the [Bren's Career Services Team](https://bren.ucsb.edu/career-services). 
-
-The proverbial torch was passed to me for the next round of maintenance and updates in January 2023. This involved refactoring the code base, processing new data, and updating the dashboard. Some additional refactoring is likely to happen during the next big update in order to further simplify the code base and improve readability -- I'll be working with MEDS Program Coordinator, [Jamie Montgomery](https://www.jamiecmontgomery.com/), to continue this maintenance year-to-year.
 
 
