updated some broken links on first ever blog post (distill)

--- a/posts/2021-09-21-distill-blogs/index.qmd
+++ b/posts/2021-09-21-distill-blogs/index.qmd
@@ -18,9 +18,9 @@ image: barney_blog.gif
 
 I am a total blog newb. 
 
-*BUT* we all have to start somewhere. And my somewhere is leading a mini-workshop in T-6 days for our first Master of Environmental Data Science (MEDS) cohort (read more about this *awesome* new program [here](https://bren.ucsb.edu/masters-programs/master-environmental-data-science)) on why blogging as data scientists is an important and valuable skill to practice, what a good blog post might look like, and some of the technical aspects of creating blog posts using the `{distill}` package.
+*BUT* we all have to start somewhere. And my somewhere is leading a mini-workshop in T-6 days for our first Master of Environmental Data Science (MEDS) cohort (read more about this [new program](https://bren.ucsb.edu/masters-programs/master-environmental-data-science)) on why blogging as data scientists is an important and valuable skill to practice, what a good blog post might look like, and some of the technical aspects of creating blog posts using the `{distill}` package.
 
-I originally set off on my self-education journey by digging into other data science-related blogs and throwing together some slides about what I found. I even practiced creating a fake blog post on my own (and very much still under development) [personal website](samanthacsik.github.io) in case anyone asked me to walk them through the steps (I can't look like I don't know what I'm doing now, right??).
+I originally set off on my self-education journey by digging into other data science-related blogs and throwing together some slides about what I found. I even practiced creating a fake blog post on my own (and very much still under development) [personal website](https://samanthacsik.github.io) in case anyone asked me to walk them through the steps (I can't look like I don't know what I'm doing now, right??).
 
 Ten slides deep and then it struck me -- I was creating a presentation on how to blog without ever *actually* creating my own blog post?? Dammit. Doesn't quite feel right. So here we are. Baby's first blog post *~about blog posts~*. I'd say this first post is half meant to serve our MEDS students as they embark on their fall quarter (and will surely be asked to blog every now and again) and half meant to be the catalyst I so desperately needed to finally put a little bit of writing out there in the data science world.
 
