--- a/projects/2023-02-15-bren-student-data-explorer/index.qmd
+++ b/projects/2023-02-15-bren-student-data-explorer/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Bren Student Data Explorer"
 description: |
-  refactoring & maintaining Bren's Shiny app for visualizing admissions and career outcome data of current students and recent graduates
+  refactoring, redesigning & maintaining Bren's Shiny dashboard for visualizing admissions and career outcome data of current students and recent graduates
 # date: 2023-02-15
 categories: [Shiny]
 image: bren-hex-white-bg.png
@@ -12,15 +12,9 @@ draft: false
 
 <br>
 
-<!-- # What's the Bren Student Data Explorer? -->
+In an effort to increase transparency surrounding student demographics and post-graduation career placement statistics, [The Bren School](https://bren.ucsb.edu/) hired R Shiny Developer Fellow, [Halina Do-Linh](https://github.com/hdolinh/) in summer 2022. Halina designed and built v1.0 of the public-facing [dashboard](https://shinyapps.bren.ucsb.edu/student-data-explorer/) for exploring these data. 
 
-In an effort to increase transparency surrounding student demographics and post-graduation career placement statistics, the [Bren School](https://bren.ucsb.edu/) hired R Shiny Developer Fellow, [Halina Do-Linh](https://github.com/hdolinh/) -- she designed and built v1.0 of the public-facing [dashboard](https://shinyapps.bren.ucsb.edu/student-data-explorer/) for exploring these data in summer 2022.
-
-<!-- # My role -->
-
-I (along with a number of other Bren staff) oversaw the development of Bren Student Data Explorer v1.0 (though to be clear, Halina led the design and technical development of the dashboard -- it's really her product to brag about!). Each year, the dashboard will be updated with new demographic data based on applications and admissions, provided by [UCSB's Graduate Division](https://www.graddiv.ucsb.edu/), and post-grad career placement data from the [Bren's Career Services Team](https://bren.ucsb.edu/career-services). 
-
-The proverbial torch was passed to me for the next round of maintenance and updates in January 2023. This involved refactoring the code base, processing new data, and updating the dashboard. Some additional refactoring is likely to happen during the next big update in order to further simplify the code base and improve readability -- I'll be working with MEDS Program Coordinator, [Jamie Montgomery](https://www.jamiecmontgomery.com/), to continue this maintenance year-to-year.
+Since then, the proverbial torch was passed to me for continued maintenance and updates. I collaborate with the Bren Admissions and [Career Services](https://bren.ucsb.edu/career-services) Teams, as well as MEDS Program Coordinator, [Jamie Montgomery](https://www.jamiecmontgomery.com/), to update data, modify visuals, and refactor the code, as needed, each year.
 
 <br>
 
